# KplGE

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
asset/glTF/test/: Box.gltf  mesh-test.gltf
asset/glTF/test/A Minimal glTF File/: A Minimal glTF File.gltf
asset/shader/: f_shader.glsl  v_shader.glsl
framework/: CMakeLists.txt
framework/common/: CMakeLists.txt  asset-loader.cc  asset-loader.h  base-application.cc  base-application.h  buffer.h  gfx-config.h  kpl-config.h  kpl-define.h
framework/graphic/: CMakeLists.txt  gfx-manager.h
framework/graphic/ogl/: ogl-manager.cc  ogl-manager.h
framework/graphics/: CMakeLists.txt  gfx-manager.h
framework/graphics/ogl/: CMakeLists.txt  ogl-manager.cc  ogl-manager.h
framework/include/: constants.h
framework/include/application/: base-application.h
framework/include/common/: asset-loader.h  buffer.h
framework/include/graphic/: graphic-config.h  graphic-manager.h  opengl-manager.h
framework/include/interface/: application.h  manager.h  runtime-module.h
framework/include/scene/: mesh.h  scene-loader.h  scene-manager.h  scene-mesh.h  scene-node.h  scene-object.h  scene-type.h
framework/include/scene/scene-loader/: gltf-constants.h  gltf-loader.h  gltf-tools.h  gltf-type.h
framework/interface/: application.h  manager.h  runtime-module.h
framework/memory/: CMakeLists.txt  mem-manager.cc  mem-manager.h
framework/memory/Allocators/: page-allocator.cc  page-allocator.h
framework/scene/: mesh.h  scene-object.cc  scene-object.h  scene-type.h
framework/source/: CMakeLists.txt
framework/source/application/: CMakeLists.txt  base-application.cc
framework/source/common/: CMakeLists.txt  asset-loader.cc
framework/source/graphic/: CMakeLists.txt  graphic-manager.cc  opengl-manager.cc
framework/source/scene/: CMakeLists.txt  scene-manager.cc  scene-object.cc  scene-type.cc
framework/source/scene/scene-loader/: CMakeLists.txt  gltf-loader.cc  gltf-tools.cc
framework/source/scene/trash/: scene-manager.cc  scene-node.cc  scene-object.cc
framework/utility/guid/: CMakeLists.txt  kpl-guid.cc  kpl-guid.h
framework/utility/log/: kpl-log.h
framework/utility/math/: CMakeLists.txt  kpl-math.h  matrix.h  utils.h  vector.h
framework/utility/math/ispc/: CMakeLists.txt  basic.ispc  matrix.ispc  vector.ispc
platform/: CMakeLists.txt
platform/linux/: CMakeLists.txt
platform/windows/: win-ogl-application.cc  win-ogl-application.h
platform/windows/RHI/: CMakeLists.txt
platform/windows/RHI/ogl/: CMakeLists.txt  wgl-gl-load.cc  wgl-manager.cc  wgl-manager.h
platform/windows/RHI/wgl/: CMakeLists.txt  wgl-define.h  wgl-manager.cc  wgl-manager.h
platform/windows/graphics/wgl/: wgl-manager.cc  wgl-manager.h
platform/windows/include/: windows-application.h
platform/windows/include/rhi/: wgl-manager.h
platform/windows/source/: CMakeLists.txt  windows-application.cc
platform/windows/source/rhi/: CMakeLists.txt  wgl-func-load.cc  wgl-manager.cc
program/: CMakeLists.txt  empty.cc  win-ogl-program.cc
test/: CMakeLists.txt  asset-loader-test.cc  kpl-guid-test.cc  kpl-math-test.cc  math-test.cc  windows-ogl-test.cc
test/framework/: CMakeLists.txt  common-asset-loader-test.cc  common-test.cc  scene-gltf-loader-test.cc  scene-manager-test.cc
test/platform/: CMakeLists.txt  windows-opengl-test.cc
utility/: CMakeLists.txt
utility/calculation-tools/: CMakeLists.txt
utility/calculation-tools/include/: kplcalct.h
utility/calculation-tools/include/private/: config.h  matrix.h  tools.h  utils.h  vector.h
utility/calculation-tools/source/: CMakeLists.txt  tools.cc
utility/calculation-tools/source/ispc/: CMakeLists.txt  basic.ispc  matrix.ispc  vector.ispc
utility/calculation-tools/test/: CMakeLists.txt  main.cc
utility/identifier-generator/include/: kplidgen.h
utility/identifier-generator/include/private/: config.h  guid.h
utility/identifier-generator/source/: CMakeLists.txt  guid.cc
utility/identifier-generator/test/: CMakeLists.txt  main.cc
utility/logging-tools/include/: kpllogt.h
utility/logging-tools/include/private/: config.h  info.h
