add_library(scene-loader gltf-loader.cc)
target_include_directories(scene-loader PUBLIC "${KPL_FRAMEWORK_INCLUDE_DIR}/scene/scene-loader")
target_include_directories(scene-loader PUBLIC "${KPL_LOGT_INCLUDE_DIR}")
target_include_directories(scene-loader PUBLIC "${EXTERNAL_ALL_INCLUDE_DIR}/json")
target_include_directories(scene-loader PRIVATE "${KPL_FRAMEWORK_INCLUDE_DIR}/common")
